# automation-agency

./: .gitignore  EMC2Ops_30_Day_Client_Acquisition_Strategy.docx  EMC2Ops_Channel_Growth_Strategy.docx  EMC2Ops_property_management_youtube_titles.txt  README.md  dashboard-config.js  dashboard.css  dashboard.html  dashboard.js  index.html  package-lock.json  package.json  playwright.config.js  robots.txt  sitemap.xml  skills-lock.json  vercel.json
acquisition-dashboard/: .env.example  .gitignore  README.md  agent.py  dashboard_store.py  index.html  main.py  office365_mail.py  package-lock.json  package.json  pyproject.toml  vercel.json  vite.config.ts
acquisition-dashboard/api/: meta-auth.js  meta-store.js  social-post.js  x-auth.js  x-store.js
acquisition-dashboard/docs/: autopilot.md  prompt.md  prospect-research-2026-05-23.md  prospect-research-2026-05-24.md  prospect-research-2026-05-26.md  prospect-research-2026-05-27.md  prospect-research-2026-05-29.md
acquisition-dashboard/src/: AcquisitionDashboard.tsx  App.tsx  AuthScreen.tsx  Dashboard.tsx  SharedUi.tsx  SocialMediaMarketing.tsx  dashboard-model.ts  index.css  strategy.ts  types.ts
acquisition-dashboard/src/lib/: supabase.ts
acquisition-dashboard/supabase/migrations/: 20260522132911_create_acquisition_dashboard_tables.sql  20260522133921_dedupe_default_sprint_tasks.sql  20260522141228_index_activity_prospect_link.sql  20260522153000_create_email_approvals.sql
acquisition-dashboard/tests/: test_dashboard_store.py
api/: book-audit.js
blog/: index.html  posts.json  styles.css
links/: index.html
(+28 files in other folders)
